feat: add flame graph, CLI monitor, OTLP export, and install script
- Flame graph: d3-flamegraph visualization with 60s auto-reset window,
  pause/resume, server-side reset via /flame-graph?reset=true
- CLI (argus top): htop-style terminal monitor in new argus-cli module,
  zero external dependencies, parallel HTTP polling
- OTLP: push-based metrics export to OpenTelemetry collectors,
  hand-coded JSON (no SDK), configurable via -Dargus.otlp.* properties
- install.sh: one-line installer with PATH setup for zsh/bash/fish
- Fix CDN URL (d3-flamegraph -> d3-flame-graph package name)
- Fix demo duration passthrough in Gradle tasks (default 5min)
- Update README with new features, installation, and configuration

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>